--- a/core/assets/bundles/bundle.properties
+++ b/core/assets/bundles/bundle.properties
@@ -1307,6 +1307,7 @@ block.bridge-conduit.name = Bridge Conduit
 block.rotary-pump.name = Rotary Pump
 block.thorium-reactor.name = Thorium Reactor
 block.mass-driver.name = Mass Driver
+block.mass-bridge.name = Mass Bridge
 block.blast-drill.name = Airblast Drill
 block.thermal-pump.name = Thermal Pump
 block.thermal-generator.name = Thermal Generator
@@ -1505,7 +1506,8 @@ block.router.details = A necessary evil. Using next to production inputs is not 
 block.distributor.description = Distributes input items to 7 output directions equally.
 block.overflow-gate.description = Only outputs items to the left and right if the front path is blocked.
 block.underflow-gate.description = Opposite of an overflow gate. Outputs to the front if the left and right paths are blocked.
-block.mass-driver.description = Long-range item transport structure. Collects batches of items and shoots them to other mass drivers.
+block.mass-driver.description = Long-range item transport structure. Collects batches of items and shoots them to other mass drivers/bridges.
+block.mass-bridge.description = Accepts items from other mass drivers/bridges and sends them to next ones at high speeds.
 block.mechanical-pump.description = Pumps and outputs liquids. Does not require power.
 block.rotary-pump.description = Pumps and outputs liquids. Requires power.
 block.thermal-pump.description = Pumps and outputs liquids.
