--- a/core/assets/icons/icons.properties
+++ b/core/assets/icons/icons.properties
@@ -368,3 +368,4 @@
 63340=large-constructor|block-large-constructor-ui
 63339=payload-loader|block-payload-loader-ui
 63338=payload-unloader|block-payload-unloader-ui
+63337=mass-bridge|block-mass-bridge-ui
